<resources>
    <string name="app_name">Ausgaben</string>

    <!-- COMMON -->
    <string name="str_all">All</string>

    <string name="str_dollarSign">$</string>
    <string name="str_euroSign">€</string>


    <!-- MainActivity -->
    <string name="str_overview">Overview</string>
    <string name="str_addExpense">Add Expense</string>

    <string name="str_importCSV">Import CSV</string>
    <string name="str_exportCSV">Export as CSV</string>


    <!-- ExpenseActivity -->
    <string name="str_expenseName">Name</string>
    <string name="str_expenseCategory">Category</string>
    <string name="str_expenseDate">Date</string>
    <string name="str_expenseDateDisplay">Select Date</string>
    <string name="str_expenseAmt">Amount</string>
    <string name="str_expensePhoto">Photo</string>
    <string name="str_expenseCountry">Country</string>
    <string name="str_save">Save</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_delete">Delete</string>

    <string-array name="spn_expenseCategory_entries">
        <item>Accommodation</item>
        <item>Food</item>
        <item>Gifts</item>
        <item>Leisure</item>
        <item>Misc</item>
        <item>Shopping</item>
        <item>Travel</item>
    </string-array>

    <string-array name="spn_currency_entries">
        <item>ALL</item>
        <item>BAM</item>
        <item>BGN</item>
        <item>BYN</item>
        <item>CHF</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>MKD</item>
        <item>NOK</item>
        <item>PLN</item>
        <item>RON</item>
        <item>RSD</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>TRY</item>
    </string-array>

    <string-array name="spn_countries_entries">
        <item>Albania</item>
        <item>Austria</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Bosnia and Herzegovina</item>
        <item>Bulgaria</item>
        <item>Croatia</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Estonia</item>
        <item>Faroe Islands</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Hungary</item>
        <item>Italy</item>
        <item>Latvia</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia (FYROM)</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Romania</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Turkey</item>
        <item>United Kingdom</item>
    </string-array>

    <string name="message_save">Input saved</string>
    <string name="message_missingAmt">Please input a valid amount</string>
    <string name="message_missingName">Please input an item name</string>
    <string name="message_dbCleared">Database cleared</string>

    <string name="dialog_expenseActivity_deleteConfirmation">Delete this expense?</string>

    <!-- ForexRatesActivity -->
    <string name="tableHeader_showHide">Show/Hide</string>
    <string name="tableHeader_toCurrency">EUR to</string>
    <string name="tableHeader_rate">Rate</string>
    <string name="message_changesSaved">Changes saved</string>

    <string name="currencyALL">ALL (Albanian lek)</string>
    <string name="currencyBAM">BAM (BiH convertible mark)</string>
    <string name="currencyBGN">BGN (Bulgarian lev)</string>
    <string name="currencyBYN">BYN (Belarusian ruble)</string>
    <string name="currencyCHF">CHF (Swiss franc)</string>
    <string name="currencyCZK">CZK (Czech koruna)</string>
    <string name="currencyDKK">DKK (Danish krone)</string>
    <string name="currencyEUR">EUR (Euro)</string>
    <string name="currencyGBP">GBP (Pound sterling)</string>
    <string name="currencyHUF">HUF (Hungarian forint)</string>
    <string name="currencyHRK">HRK (Croatian kuna)</string>
    <string name="currencyMKD">MKD (Macedonian dinar)</string>
    <string name="currencyNOK">NOK (Norwegian krone)</string>
    <string name="currencyPLN">PLN (Polish złoty)</string>
    <string name="currencyRON">RON (Romanian leu)</string>
    <string name="currencyRSD">RSD (Serbian dinar)</string>
    <string name="currencySEK">SEK (Swedish krona)</string>
    <string name="currencySGD">SGD (Singapore dollar)</string>
    <string name="currencyTRY">TRY (Turkish lira)</string>

    <!-- OverviewActivity -->
    <string name="dialog_overviewActivity_title">Set Defaults</string>

    <string-array name="spn_selectMonth_entries">
        <item>All</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
    </string-array>

    <string-array name="toggle_selectDisplayCurrency_entries">
        <item>EUR</item>
        <item>SGD</item>
    </string-array>

    <string name="str_totalExpenditure">Total Expenditure</string>
    <string name="str_viewExpensesList">View Expenses List</string>

    <string name="str_accommodation">Accommodation</string>
    <string name="str_food">Food</string>
    <string name="str_gifts">Gifts</string>
    <string name="str_leisure">Leisure</string>
    <string name="str_misc">Misc</string>
    <string name="str_shopping">Shopping</string>
    <string name="str_travel">Travel</string>

    <!-- DetailsActivity -->
    <string name="str_showFilters">Show Filters</string>
    <string name="str_hideFilters">Hide Filters</string>

    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_overview_settings">Default Display Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
