<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ruibin.ausgaben.ExpenseActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:background="@color/midnightBlue"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Ausgaben"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>

    <!-- First row - date -->

    <TextView
        android:id="@+id/text_expenseDate"
        android:text="@string/str_expenseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/input_expenseDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_toEndOf="@id/text_expenseDate"
        android:layout_alignBaseline="@id/text_expenseDate"
        android:onClick="onClickSetDate"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:clickable="true" />

    <!-- Second row - name -->

    <TextView
        android:id="@+id/text_expenseName"
        android:text="@string/str_expenseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_expenseDate"
        android:layout_alignStart="@id/text_expenseDate"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/input_expenseName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/text_expenseName"
        android:layout_alignBaseline="@id/text_expenseName"
        android:layout_alignStart="@id/input_expenseDate"
        android:background="@android:color/transparent"
        android:inputType="textCapSentences"
        android:maxLines="1" />

    <!-- Third row - category -->

    <TextView
        android:id="@+id/text_expenseCategory"
        android:text="@string/str_expenseCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_expenseName"
        android:layout_alignStart="@id/text_expenseName"
        android:layout_marginTop="25dp" />

    <Spinner
        android:id="@+id/spn_expenseCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/text_expenseCategory"
        android:layout_alignBaseline="@id/text_expenseCategory"
        android:layout_alignStart="@id/input_expenseName"
        android:entries="@array/spn_expenseCategory_entries" />

    <!-- Fourth row - amount -->

    <TextView
        android:id="@+id/text_expenseAmt"
        android:text="@string/str_expenseAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_expenseCategory"
        android:layout_alignStart="@id/text_expenseCategory"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/input_expenseAmt"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/text_expenseAmt"
        android:layout_alignBaseline="@id/text_expenseAmt"
        android:layout_alignStart="@id/spn_expenseCategory"
        android:background="@android:color/transparent"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/spn_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/input_expenseAmt"
        android:layout_alignBaseline="@id/input_expenseAmt"
        android:layout_marginStart="5dp"
        android:dropDownWidth="@dimen/spinner_currencySelection"
        android:entries="@array/spn_currency_entries" />

    <!-- Fifth row - country -->

    <TextView
        android:id="@+id/text_expenseCountry"
        android:text="@string/str_expenseCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_expenseAmt"
        android:layout_alignStart="@id/text_expenseAmt"
        android:layout_marginTop="25dp"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spn_expenseCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/text_expenseCountry"
        android:layout_alignBaseline="@id/text_expenseCountry"
        android:layout_alignStart="@id/input_expenseAmt"
        android:dropDownWidth="@dimen/spinner_editCountrySelection"
        android:entries="@array/spn_countries_entries"
        android:visibility="gone" />

    <!-- Buttons -->

    <Button
        android:id="@+id/btn_cancel"
        android:text="@string/str_cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_expenseAmt"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:onClick="onClickCancel" />

    <Button
        android:id="@+id/btn_save"
        android:text="@string/str_save"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btn_cancel"
        android:layout_alignBaseline="@+id/btn_cancel"
        android:layout_marginStart="35dp"
        android:onClick="onClickSave" />

    <Button
        android:id="@+id/btn_delete"
        android:text="@string/str_delete"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_cancel"
        android:layout_alignStart="@id/btn_cancel"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:onClick="onClickDelete" />

</RelativeLayout>
