<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ruibin.ausgaben.OverviewActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:background="@color/midnightBlue"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Ausgaben"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>

    <Spinner
        android:id="@+id/spn_selectMonthDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="25dp"
        android:dropDownWidth="@dimen/spinner_monthSelection"
        android:entries="@array/spn_selectMonth_entries" />

    <Spinner
        android:id="@+id/spn_selectCountryDisplay"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/spn_selectMonthDisplay"
        android:dropDownWidth="@dimen/spinner_countrySelection"
        android:entries="@array/spn_selectCountry_entries" />

    <TextView
        android:id="@+id/text_totalExpenditure"
        android:text="@string/str_totalExpenditure"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spn_selectMonthDisplay"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/expenditure"
        android:textSize="50sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_totalExpenditure"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:onClick="onClickToggleCurrencyDisplay" />


    <!-- Breakdown of expenses by category -->

    <LinearLayout
        android:id="@+id/layout_categoryBreakdown_food"
        android:layout_width="@dimen/overview_category"
        android:layout_height="wrap_content"
        android:layout_below="@id/expenditure"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp" >

        <TextView
            android:id="@+id/text_categoryBreakdown_food"
            android:text="@string/str_food"
            android:layout_width="@dimen/overview_categoryText"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/amount_categoryBreakdown_food"
            android:layout_width="@dimen/overview_categoryAmount"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_categoryBreakdown_gifts"
        android:layout_width="@dimen/overview_category"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_categoryBreakdown_food"
        android:layout_alignStart="@id/layout_categoryBreakdown_food"
        android:layout_marginTop="8dp" >

        <TextView
            android:id="@+id/text_categoryBreakdown_gifts"
            android:text="@string/str_gifts"
            android:layout_width="@dimen/overview_categoryText"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/amount_categoryBreakdown_gifts"
            android:layout_width="@dimen/overview_categoryAmount"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_categoryBreakdown_leisure"
        android:layout_width="@dimen/overview_category"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_categoryBreakdown_gifts"
        android:layout_alignStart="@id/layout_categoryBreakdown_gifts"
        android:layout_marginTop="8dp" >

        <TextView
            android:id="@+id/text_categoryBreakdown_leisure"
            android:text="@string/str_leisure"
            android:layout_width="@dimen/overview_categoryText"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/amount_categoryBreakdown_leisure"
            android:layout_width="@dimen/overview_categoryAmount"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_categoryBreakdown_misc"
        android:layout_width="@dimen/overview_category"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_categoryBreakdown_leisure"
        android:layout_alignStart="@id/layout_categoryBreakdown_leisure"
        android:layout_marginTop="8dp" >

        <TextView
            android:id="@+id/text_categoryBreakdown_misc"
            android:text="@string/str_misc"
            android:layout_width="@dimen/overview_categoryText"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/amount_categoryBreakdown_misc"
            android:layout_width="@dimen/overview_categoryAmount"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_categoryBreakdown_shopping"
        android:layout_width="@dimen/overview_category"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_categoryBreakdown_misc"
        android:layout_alignStart="@id/layout_categoryBreakdown_misc"
        android:layout_marginTop="8dp" >

        <TextView
            android:id="@+id/text_categoryBreakdown_shopping"
            android:text="@string/str_shopping"
            android:layout_width="@dimen/overview_categoryText"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/amount_categoryBreakdown_shopping"
            android:layout_width="@dimen/overview_categoryAmount"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_categoryBreakdown_travel"
        android:layout_width="@dimen/overview_category"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_categoryBreakdown_shopping"
        android:layout_alignStart="@id/layout_categoryBreakdown_shopping"
        android:layout_marginTop="8dp" >

        <TextView
            android:id="@+id/text_categoryBreakdown_travel"
            android:text="@string/str_travel"
            android:layout_width="@dimen/overview_categoryText"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/amount_categoryBreakdown_travel"
            android:layout_width="@dimen/overview_categoryAmount"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_viewExpensesList"
        android:text="@string/str_viewExpensesList"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_below="@id/layout_categoryBreakdown_travel"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true"
        android:onClick="onClickViewExpensesList" />

</RelativeLayout>



    <!--
    <RadioGroup
        android:id="@+id/toggle_displayCurrency"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@id/spn_selectMonthDisplay"
        android:layout_marginStart="200dp"
        android:background="@drawable/blue_outline"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/toggle_displayCurrency_EUR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="EUR"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/toggle_displayCurrency_SGD"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="SGD"
            android:textColor="@android:color/white" />

    </RadioGroup>
    -->